testsuite/bsc.bugs/github/gh353/Disambig_Cons_NoStruct_Ambig.bs
package Disambig_Cons_NoStruct_Ambig where

import Types

-- -----

fn1 :: MyList2 Bool
fn1 = let res = Cons { head = True; tail = Nil; };
      in res
